# vision-track

./: .gitignore  README.md  README_RU.md  app.py  pyproject.toml  requirements-cuda.txt  requirements-mps.txt  requirements.txt
configs/: app.yaml  domain_manifest.schema.json
docs/: TRAINING.md  annotation_policy.md  dataset_split_protocol.md  live_source_smoke_2026-07-14.md  webcam_hardware_smoke.md
models/checkpoints/: config.yaml
notebooks/: VisionTrack_Analysis.ipynb
reports/: dataset_audit.json  dataset_audit.md  dataset_audit_exact_resolution.json  dataset_audit_manual_review.json  dataset_audit_phash_clusters.json  dataset_audit_phash_edges.csv  performance_metrics.json
reports/demo_results/: demo_metadata.json
reports/model_promotions/: fine_tuned_n_to_best_pt.json
scripts/: audit_dataset.py  benchmark.py  compare_artifacts.py  evaluate_baseline.py  evaluate_model.py  generate_demo.py  prepare_coco_person.py  promote_model.py  prune.py  quantize.py  run_baseline_stage.py  train.py  validate_dataset.py
src/vision_track/: __init__.py  baseline.py  configuration.py  context.py  counting.py  dataset_audit.py  dataset_validation.py  detections.py  detector.py  device.py  engine.py  lifecycle.py  logging_utils.py  metrics.py  model_registry.py  model_selection.py  preprocessing.py  preview.py  queues.py  readers.py  rendering.py  scheduler.py  sources.py  streamlit_state.py  tracking.py  ui.py  webcams.py
src/vision_track.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_audit_smoke.py  test_engine.py  (+2 more)
(+66 files in other folders)
